--- a/SSDProject/TestShell/TestShell.vcxproj
+++ b/SSDProject/TestShell/TestShell.vcxproj
@@ -128,7 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="unittest.cpp" />
+    <ClCompile Include="MOCKCommand.cpp" />
+    <ClCompile Include="ReadCommand.cpp" />
+    <ClCompile Include="TestApp1Command.cpp" />
+    <ClCompile Include="TestShellApplication.cpp" />
+    <ClCompile Include="WriteCommand.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Command.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
