--- a/SSDProject/SSDProject/SSDProject.vcxproj.filters
+++ b/SSDProject/SSDProject/SSDProject.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="IStorage.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
