[red] TestApp1, 2를 위한 콘솔 출력 확인용 Fixture 추가 및 TC 추가

--- a/SSDProject/TestShell/TestShell.vcxproj
+++ b/SSDProject/TestShell/TestShell.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadCommand.cpp" />
     <ClCompile Include="TestApp1Command.cpp" />
+    <ClCompile Include="TestApp2Command.cpp" />
     <ClCompile Include="TestShellApplication.cpp" />
     <ClCompile Include="WriteCommand.cpp" />
   </ItemGroup>
