--- a/SSDProject/TestShell/TestShell.vcxproj.filters
+++ b/SSDProject/TestShell/TestShell.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="HelpCommand.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FullWriteCommand.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FullReadCommand.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
