--- a/SSDProject/SSDProject/SSDProject.vcxproj.filters
+++ b/SSDProject/SSDProject/SSDProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="SSD.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="StorageException.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IStorage.h">
@@ -31,6 +34,9 @@
     </ClInclude>
     <ClInclude Include="util.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StorageException.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
