--- a/SSDProject/SSDProject/SSDProject.vcxproj.filters
+++ b/SSDProject/SSDProject/SSDProject.vcxproj.filters
@@ -24,12 +24,27 @@
     <ClCompile Include="SSD.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Command.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="StorageException.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Parser.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IStorage.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="util.h">
+    <ClInclude Include="Parser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Command.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StorageException.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
