[red] add InputValideChecker for checking input parameter validation

--- a/SSDProject/TestShell/TestShell.vcxproj
+++ b/SSDProject/TestShell/TestShell.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="FullReadCommand.cpp" />
     <ClCompile Include="FullWriteCommand.cpp" />
     <ClCompile Include="HelpCommand.cpp" />
+    <ClCompile Include="InputValidChecker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadCommand.cpp" />
     <ClCompile Include="TestApp1Command.cpp" />
