[green] fix SSDTest based on refactoring

--- a/SSDProject/SSDTest/SSDTest.vcxproj
+++ b/SSDProject/SSDTest/SSDTest.vcxproj
@@ -32,6 +32,9 @@
   <ImportGroup Label="Shared" />
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LibraryPath>C:\Users\user\Desktop\CRA_project\SSDProject\SSDProject\SSDProject\Debug\SSD;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -61,6 +64,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>C:\Users\user\Desktop\CRA_project\SSDProject\SSDProject\SSDProject\Debug\SSD\Parser.obj;C:\Users\user\Desktop\CRA_project\SSDProject\SSDProject\SSDProject\Debug\SSD\Command.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
