ShellRunner Class 추가 및 main 함수 연결

--- a/SSDProject/TestShell/TestShell.vcxproj
+++ b/SSDProject/TestShell/TestShell.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="HelpCommand.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadCommand.cpp" />
+    <ClCompile Include="ShellRunner.cpp" />
     <ClCompile Include="TestApp1Command.cpp" />
     <ClCompile Include="TestApp2Command.cpp" />
     <ClCompile Include="TestShellApplication.cpp" />
