--- a/SSDProject/TestShell/TestShell.vcxproj.filters
+++ b/SSDProject/TestShell/TestShell.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="FullReadCommand.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ShellRunner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
