--- a/SSDProject/TestShell/TestShell.vcxproj.filters
+++ b/SSDProject/TestShell/TestShell.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="InputValidChecker.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="EraseCommand.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
