--- a/SSDProject/TestShell/TestShell.vcxproj.filters
+++ b/SSDProject/TestShell/TestShell.vcxproj.filters
@@ -42,10 +42,16 @@
     <ClCompile Include="FullReadCommand.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
