--- a/SSDProject/SSDProject/SSDProject.vcxproj.filters
+++ b/SSDProject/SSDProject/SSDProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="StorageException.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Buffer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IStorage.h">
@@ -37,6 +40,9 @@
     </ClInclude>
     <ClInclude Include="StorageException.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Buffer.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
