--- a/SSDProject/SSDProject/SSDProject.vcxproj.filters
+++ b/SSDProject/SSDProject/SSDProject.vcxproj.filters
@@ -35,9 +35,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IStorage.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Parser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -51,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="Buffer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="IStorage.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
