--- a/SSDProject/TestShell/TestShell.vcxproj.filters
+++ b/SSDProject/TestShell/TestShell.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="EraseCommand.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FlushCommand.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
